# novel-archives

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: ci_tests.yaml
backend/: Cargo.toml
documents/design-doc/: Design--novel-archives.md  Design--ルビ.md  Design--注釈.md  (+1 more)
kernel/: Cargo.toml
kernel/backend/: Cargo.toml
kernel/backend/src/: lib.rs  prelude.rs
kernel/backend/src/domains/: mod.rs
kernel/backend/src/domains/models/: id_generator.rs  mod.rs  prelude.rs
kernel/backend/src/domains/models/notifications/: user.rs
kernel/backend/src/domains/models/novels/: body.rs  chapter.rs  mod.rs  novel.rs  order.rs  part.rs  series.rs  series_factory.rs  work.rs
kernel/backend/src/domains/models/novels/authors/: author.rs  mod.rs  repository.rs  service.rs
kernel/backend/src/domains/models/securities/: user.rs
kernel/backend/src/domains/models/users/: mod.rs  name.rs  user.rs
kernel/backend/src/drivers/repositories/: id_generator.rs
kernel/backend/src/libs/: mod.rs
kernel/general/: Cargo.toml
kernel/general/src/: lib.rs  prelude.rs
kernel/general/src/domains/models/: entity.rs  id.rs  mod.rs  prelude.rs
kernel/general/src/libs/: times.rs
kernel/general/src/libs/types/: datetime.rs  error.rs  id.rs  mod.rs  result.rs
kernel/general/src/prelude/: mod.rs
kernel/macros/: Cargo.toml
kernel/macros/src/: lib.rs
kernel/src/: lib.rs
kernel/src/drivers/repositories/: id_generator.rs
kernel/src/libs/: mod.rs
kernel/src/libs/types/: generic_id.rs  id.rs  mod.rs
kernel/src/models/id/: mod.rs
kernel/src/prelude/: mod.rs
(+1 files in other folders)
