[package]
name = "backend"
version = "0.1.0"
authors = ["qwerty2501 <qwerty2501@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harsh="0.2.1"
anyhow="1.0"
chrono="0.4"
chrono-tz = "0.5"
rand="0.8"
thiserror = "1.0"
test-case = "1.1.0"

