[package]
name = "general"
version = "0.1.0"
authors = ["qwerty2501 <939468+qwerty2501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
chrono="0.4"
chrono-tz = "0.5"
thiserror = "1.0"

[dev-dependencies]
test-case = "1.1.0"
